Rotate edge direction changed between 2.64 and 2.65 (low priority) #37160

Closed
opened 2013-10-20 13:13:43 +02:00 by JA 12 · 3 comments

%%%I noticed that I'm constantly rotating edges to the wrong direction and found out that the direction changed between Blender 2.64 and 2.65
http://www.pasteall.org/pic/show.php?id=61067

To me this is the wrong direction but in any case, not a high priority at this point. Just letting you know what I found.

Blender version with error, and version that worked

Works: 2.64 official
Doesn't work: 2.65 official to the latest RC2

Steps for others to reproduce the error

  • Subdivide default cube a few times
  • Select an edge, ctrl+E -> rotate edge CCW
  • Edge rotates CW instead of CCW

%%%

%%%I noticed that I'm constantly rotating edges to the wrong direction and found out that the direction changed between Blender 2.64 and 2.65 http://www.pasteall.org/pic/show.php?id=61067 To me this is the wrong direction but in any case, not a high priority at this point. Just letting you know what I found. # Blender version with error, and version that worked Works: 2.64 official Doesn't work: 2.65 official to the latest RC2 # Steps for others to reproduce the error - Subdivide default cube a few times - Select an edge, ctrl+E -> rotate edge CCW - Edge rotates CW instead of CCW %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r60876, thanks for the report!%%%

%%%Fixed in r60876, thanks for the report!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37160
No description provided.