Fix [#37160] Rotate edge direction changed between 2.64 and 2.65 (low priority)

Easy to fix, but do not really understand *why* this is needed...